	PR rtl-optimization/51044 	* dse.c (emit_inc_dec_insn_before): Ensure new_insn is an instruction 	rather than just insn body.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@181861 138bc75d-0d04-0410-961f-82ee72b054a4